--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^2.2.0",
     "antd": "^5.14.1",
     "axios": "^1.6.7",
+    "jwt-decode": "^4.0.0",
     "mui-color-input": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
